fix CD appendix typo

--- a/content/appendix-C-cd.tex
+++ b/content/appendix-C-cd.tex
@@ -28,8 +28,8 @@
     |
     |-- python/                      Prototyp knihovny pro jazyk Python
     |  |-- business_context/         Jádro knihovny
-    |  |-- business_context-grpc/    Knihovna pro síťovou komunikaci využívající gRPC
-    |  |-- business_context-xml/     Knihovna pro načítání a zápis byz. kontextů do XML
+    |  |-- business_context_grpc/    Knihovna pro síťovou komunikaci využívající gRPC
+    |  |-- business_context_xml/     Knihovna pro načítání a zápis byz. kontextů do XML
     |
     |-- xml/                         Schéma XML pro zápis byz. kontextů
     |
