added 2 more python modules

--- a/content/chapter-05-implementace.tex
+++ b/content/chapter-05-implementace.tex
@@ -396,7 +396,8 @@ Jazyk Python poskytuje na rozdíl od jazyka Java téměř všechny nástroje, kt
 prototypu knihovny potřeba. Jedinou výjimkou byl modul pro obsluhu frameworku gRPC.
 Ze standardní knihovny jazyka byly využity moduly \code{typing} pro statické typování,
 \code{re} pro regulární výrazy, \code{enum} pro implementaci výčtových hodnot, \code{copy} pro
-kopírování objektů, \code{fs} pro práci se soubory, \code{thrading} pro práci s vlákny a zámky
+kopírování objektů, \code{fs} pro práci se soubory, \code{thrading} pro práci s vlákny a zámky,
+\code{itertools} pro práci s iterátory, \code{inspect} pro využití reflexe
 a \code{xml} pro práci s XML dokumenty.
 
 
