--- a/content/chapter-06-verifikace.tex
+++ b/content/chapter-06-verifikace.tex
@@ -161,7 +161,7 @@ přehled je v tabulce~\ref{tbl:use-cases}.
         \hline
         \textbf{\#} & \textbf{Use-case} \\
         \hline \hline
-        \textbf{UC01} & Nepřihlášen\'y uživatel si může vytvořit zákazn\'{\i}ck\'y účet \\
+        \textbf{UC01} & Nepřihlášen\'y uživatel si může vytvořit zákaznick\'y účet \\
         \textbf{UC02} & Zákazn\'{\i}k může prohl\'{\i}žet seznam produktů \\
         \textbf{UC03} & Zákazn\'{\i}k může vkládat produkty do koš\'{\i}ku \\
         \textbf{UC04} & Zákazn\'{\i}k může vytvořit objednávku \\
