--- a/diploma-thesis.tex
+++ b/diploma-thesis.tex
@@ -10,7 +10,7 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % informace o práci
-\newcommand\WorkTitle{Centrální správa a automatická integrace byznys pravidel v architektuře orientované na služby} % název
+\newcommand\WorkTitle{Centrální správa a automatická integrace byznys pravidel v~architektuře orientované na služby} % název
 \newcommand\FirstandFamilyName{Bc. Filip Klimeš}                                                                     % autor
 \newcommand\Supervisor{Ing. Karel Čemus}                                                                             % vedoucí
 
