--- a/content/appendix-B-snimky.tex
+++ b/content/appendix-B-snimky.tex
@@ -29,6 +29,6 @@
 \begin{sidewaysfigure}[ht]
     \centering
     \includegraphics[keepaspectratio=true, width=\linewidth]{figures/example-system-context-hierarchy.pdf}
-    \caption{Diagram hirearchie byznysov\'ych kontextů ukázkového systému}
+    \caption{Diagram hierarchie byznysov\'ych kontextů ukázkového systému}
     \label{fig:example-system-context-hirearchy}
 \end{sidewaysfigure}
