--- a/content/chapter-06-verifikace.tex
+++ b/content/chapter-06-verifikace.tex
@@ -280,7 +280,7 @@ jsou podle domén děleny i jednotlivé služby systému.
 \end{table}
 
 Na obrázku~\ref{fig:example-system-context-hirearchy} je vizualizována
-hirearchie byznysov\'ych kontextů v ukázkovém systému, jejich vazba na \gls{UC}
+hierarchie byznysov\'ych kontextů v ukázkovém systému, jejich vazba na \gls{UC}
 a také byznysová pravidla, která se v kontextech aplikuj\'{\i}.
 
 \subsection{Služby}
