--- a/content/chapter-01-uvod.tex
+++ b/content/chapter-01-uvod.tex
@@ -33,19 +33,19 @@ kódu a tím jsou zvýšeny náklady na vývoj systému a riziko lidské chyby.
 Cílem této práce je prozkoumat myšlenku inovativního přístupu k centrální správě a automatické
 integraci byznysových pravidel v systémech využívajících architekturu orientovanou na služby
 a navrhnout framework, který by umožnil tento přístup uplatnit v praxi.
-Tento koncept by měl díky využití aspektově orientovaného programování usnadnit práci vývojářů
-a doménových expertů. Díky tomu by mohl přinést snížení nákladů na vývoj a údržbu informačních systémů
-a tím zvýšit jejich kvalitu a snížit náklady na jejich vývoj.
+Tento koncept pomocí aspektově orientovaného programování usnadní práci vývojářů
+a doménových expertů. Díky tomu přinese snížení nákladů na vývoj a údržbu informačních systémů
+a tím zvýší jejich kvalitu a sníží náklady na jejich vývoj.
 
 %\goal{Popis struktury DP a obsah kapitol}
 Kapitola~\ref{ch:analyza} se věnuje detailn\'{\i} anal\'yze problematiky byznysov\'ych pravidel a
 architektury orientované na služby, včetně jej\'{\i}ho historického v\'yvoje až po nejnovějš\'{\i} trendy,
 a v závěru identifikuje požadavky kladené na framework pro centráln\'{\i} správu a
 automatickou integraci byznysov\'ych pravidel v této architektuře. Kapitola~\ref{ch:reserse}
-se zab\'yvá rešerš\'{\i} stávaj\'{\i}c\'{\i}ch př\'{\i}stupu k v\'yvoji informačn\'{\i}ch systému a speciálně se zaměřuje
+se zab\'yvá rešerš\'{\i} stávaj\'{\i}c\'{\i}ch př\'{\i}stupů k v\'yvoji informačn\'{\i}ch systémů a speciálně se zaměřuje
 na koncepty aspektově orientovaného programován\'{\i} a modern\'{\i}ho aspekty ř\'{\i}zeného př\'{\i}stupu k návrhu
 systémů. Dále se kapitola věnuje průzkumu existuj\'{\i}c\'{\i}ch nástrojů pro správu byznysov\'ych pravidel a existujícím
-síťovým architekturám, které budou sloužit pro distribuci byznysových pravidel mezi službami.
+síťovým architekturám, které slouží pro distribuci byznysových pravidel mezi službami.
 Kapitola~\ref{ch:navrh} formalizuje prostřed\'{\i} architektury orientované na služby do terminologie
 aspektově orientovaného programován\'{\i} a na základě této formalizace navrhuje koncept frameworku,
 kter\'y realizuje centráln\'{\i} správu a automatickou integraci byznysov\'ych pravidel.
